# linear-regression-houses

./: README.md  Regressão Linear.ipynb  modelo_casas_a_precificar.pkl  pyproject.toml
