[tool.poetry]
name = "linear-regression-houses"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^6.0.0"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
